QListView: fix skipping indexes in selectedIndexes().

Remove spurious increment of i.

Task-number: QTBUG-51086
Change-Id: I4307a6728de1e7f25c8afa31fe2066f92373f3fc
Reviewed-by: Edward Welbourne <edward.welbourne@theqtcompany.com>
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@theqtcompany.com>
Reviewed-by: Marc Mutz <marc.mutz@kdab.com>

cregit: a3b8e355fc17783a5d4badfb9ad50247655000cd https://github.com/qt/qtbase/commit/a3b8e355fc17783a5d4badfb9ad50247655000cd