src/widgets/itemviews/qlistview.cpp
@@ -6861,8 +6861,6 @@ operator|.
 name|count
 argument_list|()
 condition|;
-operator|++
-name|i
 control|)
 block|{
 specifier|const
